--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
